iOS & Xcode Cleanup

--- a/platforms/macos/projects/Configuration/GlobalDebugSettings.xcconfig
+++ b/platforms/macos/projects/Configuration/GlobalDebugSettings.xcconfig
@@ -7,3 +7,10 @@
 //
 
 GCC_PREPROCESSOR_DEFINITIONS_DEBUG = _DEBUG=1 DEBUG=1
+GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS_DEBUG)
+
+ONLY_ACTIVE_ARCH_DEBUG = YES
+ONLY_ACTIVE_ARCH = $(ONLY_ACTIVE_ARCH_DEBUG)
+
+GCC_SYMBOLS_PRIVATE_EXTERN_DEBUG = NO
+GCC_SYMBOLS_PRIVATE_EXTERN = $(GCC_SYMBOLS_PRIVATE_EXTERN_DEBUG)
