--- a/platforms/macos/projects/Configuration/GlobalSettings.xcconfig
+++ b/platforms/macos/projects/Configuration/GlobalSettings.xcconfig
@@ -8,3 +8,6 @@
 
 GCC_PREPROCESSOR_DEFINITIONS_GLOBAL = $(inherited) USE_OPENAL HANDLE_CHARS_SEPARATELY USE_OLD_CPP
 GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS_GLOBAL)
+
+GCC_SYMBOLS_PRIVATE_EXTERN_GLOBAL = YES
+GCC_SYMBOLS_PRIVATE_EXTERN = $(GCC_SYMBOLS_PRIVATE_EXTERN_GLOBAL)
