--- a/platforms/macos/projects/Configuration/Settings_iOS.xcconfig
+++ b/platforms/macos/projects/Configuration/Settings_iOS.xcconfig
@@ -10,3 +10,12 @@
 
 GCC_PREPROCESSOR_DEFINITIONS_IOS = USE_GLES $(GCC_PREPROCESSOR_DEFINITIONS_GLOBAL) 
 GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS_IOS)
+
+SDKROOT_IOS = iphoneos
+SDKROOT = $(SDKROOT_IOS)
+
+// Target as many architectures as we can
+ARCHS_IOS = armv6 armv7 armv7s arm64
+ARCHS = $(ARCHS_IOS)
+
+TARGETED_DEVICE_FAMILY = 1,2 // iPhone/iPad
