--- a/platforms/macos/projects/Configuration/Settings_macOS.xcconfig
+++ b/platforms/macos/projects/Configuration/Settings_macOS.xcconfig
@@ -19,5 +19,8 @@ VALID_ARCHS_MACOS = $(ARCHS_MACOS_PPC) $(ARCHS_MACOS_X86) $(ARCHS_MACOS_ARM)
 VALID_ARCHS = $(VALID_ARCHS_MACOS)
 
 // Compile for (almost) everything ever
-ARCHS_MACOS = $(ARCHS_MACOS_X86) $(ARCHS_MACOS_ARM)
-ARCHS = $(ARCHS_MACOS)
+// @NOTE: New Xcode versions will bitch and moan about having to compile for i386
+//ARCHS_MACOS = $(ARCHS_MACOS_X86) $(ARCHS_MACOS_ARM)
+//ARCHS = $(ARCHS_MACOS)
+// Just use whatever Xcode is trying to use...
+ARCHS = $(ARCHS)
