Fix VS Directories

--- a/platforms/windows/projects/MinecraftClient.SDL2/MinecraftClient.SDL2.vcxproj.filters
+++ b/platforms/windows/projects/MinecraftClient.SDL2/MinecraftClient.SDL2.vcxproj.filters
@@ -18,26 +18,20 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="$(MC_ROOT)\platforms\sdl\AppPlatform_sdl.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\platforms\sdl\AppPlatform_sdlbase.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="$(MC_ROOT)\platforms\sdl\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\platforms\openal\SoundSystemAL.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\sdl\base\AppPlatform_sdl_base.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sdl\desktop\AppPlatform_sdl.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="$(MC_ROOT)\platforms\sdl\AppPlatform_sdl.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="$(MC_ROOT)\platforms\sdl\AppPlatform_sdlbase.hpp">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="$(MC_ROOT)\compat\KeyCodes.hpp">
       <Filter>Header Files\Compatibility</Filter>
     </ClInclude>
@@ -46,6 +40,12 @@
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\compat\SDLKeyCodes.h">
       <Filter>Header Files\Compatibility</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sdl\base\AppPlatform_sdl_base.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sdl\desktop\AppPlatform_sdl.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
