* Gitignore the pig texture.

--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,4 @@ xcuserdata/
 /game/assets/gui/feedback_fill.png
 /game/assets/gui/feedback_outer.png
 /game/assets/snow.png
+/game/assets/mob/pig.png
