--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -271,6 +271,8 @@ add_library(reminecraftpe-core STATIC
     world/tile/FarmTile.cpp
     world/tile/DoorTile.cpp
     world/tile/RocketLauncherTile.cpp
+    world/tile/WireTile.cpp
+    world/tile/RedStoneTorchTile.cpp
     renderer/GL/GL.cpp
 )
 target_include_directories(reminecraftpe-core PUBLIC . ..)
