--- a/platforms/windows/projects/World/World.vcxproj
+++ b/platforms/windows/projects/World/World.vcxproj
@@ -348,7 +348,9 @@
     <ClCompile Include="$(MC_ROOT)\source\world\entity\Cow.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\entity\Creeper.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\world\entity\Pig.cpp" />
+    <ClCompile Include="..\..\..\..\source\world\tile\ButtonTile.cpp" />
     <ClCompile Include="..\..\..\..\source\world\tile\LeverTile.cpp" />
+    <ClCompile Include="..\..\..\..\source\world\tile\PressurePlateTile.cpp" />
     <ClCompile Include="..\..\..\..\source\world\tile\RedStoneTorchTile.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -460,7 +462,9 @@
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Creeper.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Pig.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\world\entity\Rocket.hpp" />
+    <ClInclude Include="..\..\..\..\source\world\tile\ButtonTile.hpp" />
     <ClInclude Include="..\..\..\..\source\world\tile\LeverTile.hpp" />
+    <ClInclude Include="..\..\..\..\source\world\tile\PressurePlateTile.hpp" />
     <ClInclude Include="..\..\..\..\source\world\tile\RedStoneTorchTile.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
